simple_bank/eks/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: simple-bank-api-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    app: simple-bank-api
  type: ClusterIP
