simple_bank/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
 
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-bank-api-svc
            port:
              number: 80
